<resources>
  <string name="app_name">ASR Demo</string>
  <string name="english">English</string>
  <string name="urdu">Urdu</string>
  <string name="telugu">Telugu</string>
  <string name="tamil">Tamil</string>
  <string name="marathi">Marathi</string>
  <string name="malayalam">Malayalam</string>
  <string name="kannada">Kannada</string>
  <string name="gujarati">Gujarati</string>
  <string name="bengali">Bengali</string>
  <string name="hindi">Hindi</string>
</resources>
